build: Add launch4j-maven-plugin
Signed-off-by: unknowIfGuestInDream <liang.tang.cx@gmail.com>